# Matcha-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: health.py  router.py
app/core/: config.py  container.py  dependencies.py  exceptions.py  security.py  storage.py  time.py
app/database/: __init__.py  base.py  models.py  session.py
app/modules/activity/: router.py  schemas.py
app/modules/admin/: router.py  schemas.py
app/modules/admin/static/: index.html
app/modules/auth/: db_repository.py  repository.py  router.py  schemas.py  service.py
app/modules/auth/domain/: models.py
app/modules/chats/: db_repository.py  repository.py  router.py  schemas.py  service.py
app/modules/chats/domain/: models.py
app/modules/deals/: db_repository.py  repository.py  router.py  schemas.py  service.py
app/modules/deals/domain/: models.py
app/modules/matches/: db_repository.py  repository.py  router.py  schemas.py  service.py
app/modules/matches/domain/: models.py
app/modules/offers/: db_repository.py  repository.py  router.py  schemas.py  service.py
app/modules/offers/domain/: models.py
app/modules/profile/: db_repository.py  repository.py  router.py  schemas.py  service.py
app/modules/profile/domain/: models.py
migrations/: env.py
migrations/versions/: 001_initial.py
tests/: test_app.py
